[package]
name = "forest"
version = "0.1.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/leshow/forest"
description = """
Forest - a binary tree implementation in Rust
"""

[dependencies]
rayon = "0.8"
typed-arena = "1.3"

[lib]
name = "forest"
path = "src/lib.rs"